# ExtractKit

./: LICENSE  README.md  setup.cfg
src/ExtractKit/: bikeExtractor.py  carExtractor.py  flipkartExtractor.py  gadgetsExtractor.py  newsExtractor.py  pcBuildExtractor.py
