[metadata]
name = ExtractKit
version = 1.0.0
author = Karthik Raja, Vignesh R
author_email = teampcbuild01@gmail.com
description = A Easy Scrapper for scrapping essential data from web (Like Price of car, bike, mobiles, and flipkart, and PC Building components)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coders-square/ExtractKit
project_urls =
    Bug Tracker = https://github.com/coders-square/ExtractKit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires = 
    beautifulsoup4
    requests

[options.packages.find]
where = src